--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -70,7 +70,7 @@
                 <li><a><img src="/static/img/reportes_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Reportes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="#">Alumnos por Grupo</a></li>
+                        <li><a href="/reportes/grupo/alumnos">Alumnos por Grupo</a></li>
                         <li><a href="#">Estado de cuenta por Titular</a></li>
                         <li><a href="/reportes/asistencia">Asistencia Mensual </a></li>
                         <li><a href="/reportes/balance">Balance Mensual</a></li>
