--- a/src/escuela/templates/clases-form.html
+++ b/src/escuela/templates/clases-form.html
@@ -33,21 +33,15 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nueva Clase </span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nueva Clase</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Podr&aacute; visualizar a todas las <strong>Clases</strong> ademas de agregar nuevas. Siga los siguientes pasos:&nbsp;</p>
+<p style="text-align: center;"> Cargar el nombre de la clase y la descripción, ambos campos son <strong>obligatorios</strong>.</p>
     <p style="text-align: center;">&nbsp;</p>
-        <p><strong>Si desea agregar Clases , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
-        <p><span style="color: #003366;"><strong>Opcion 1. Nueva Clase :&nbsp;Ingrese de la clase y descripci&oacute;n, luego presione Enter.</strong></span></p>
-        <p>&bull;<strong> Guardar.</strong></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Clase : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
-        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Clase : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
-        <p>&bull; <strong><em>El registro ser&aacute; eliminado de forma <strong>permanente</strong>.</em></strong></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Clase:</strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar la clase por su nombre o descripci&oacute;n.</em></strong></p>
-{% endblock %}
+        <img src="/static/img/pasos_nueva_clase.gif" alt="pasos_nueva_clase" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Guardar registro de Clase, clic en : <img src="/static/img/guardar.png" alt="guardar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Si no desea guardar el registro dar clic en : <img src="/static/img/cancelar.png" alt="cancelar" /></strong></span></p>
+{% endblock %}}
