--- a/src/escuela/templates/inscripciones-bajas.html
+++ b/src/escuela/templates/inscripciones-bajas.html
@@ -110,7 +110,25 @@
 <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Baja de Inscripciones</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-        <p><span style="color: #003366;"><strong>Se visualiza el listado de todo los alumnos activos:</strong></span></p>
-        <p><br />&bull; <strong><em>Puede dar de baja al alumno cuando abandona el curso o la clase ha terminado, asi deja de generar cuentas a su nombre.</em></strong></p>
-        <p><br />&bull; <strong><em>Confirmar o Cancelar la baja.</em></strong></p>
+<p style="text-align: center;">Podr&aacute; visualizar todas las <strong>Inscripciones</strong> activas "A" e inactivas "I".</p>
+    <p style="text-align: center;">&nbsp;</p>
+        <img src="/static/img/pasos_baja_inscripcion.gif" alt="pasos_baja_inscripcion" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br><br>
+
+        <hr>
+        <p><span style="color: #003366;"><strong>Opcion 1. Lista de Inscripciones. </strong></span></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 2.  Filtrar la cantidad de inscripciones en la pantalla.</strong></span></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Buscar Inscripción <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Cédula, Nombre, Apellido, Grupo, Fecha). </em></strong></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Baja Inscripción <img src="/static/img/baja.png" alt="nuevo_titular" /></strong></span></p>
+        <p>&bull; <strong><em>El registro de la inscripción será eliminado de forma <strong>permanente</strong>.</em></strong></p>
 {% endblock %}
