--- a/src/main/templates/main/profesores.html
+++ b/src/main/templates/main/profesores.html
@@ -116,24 +116,31 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><span style="color: #003366;"><strong>Nuevo Profesor</strong></span></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista de Profesores</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Profesores</strong> exitentes, ademas de agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
+<p style="text-align: center;"><span style="font-size: 12pt;">Podr&aacute; visualizar a todos los <strong>Profesores</strong> con sus datos, además de poder agregar nuevos.</span></p>
     <p style="text-align: center;">&nbsp;</p>
-        <p><strong>Si desea agregar m&aacute;s profesores , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
-        <p><span style="color: #003366;"><strong>Opcion 1. Nuevo Profesor :&nbsp;Ingrese el numero de c&eacute;dula y presione Enter.</strong></span></p>
-        <p>&bull; <em><strong>Complete de manera obligatoria los siguientes campos:</strong></em>C&eacute;dula, Nombre y Apellido, Fecha de Nacimiento, Sexo,
-            Direcci&oacute;n, Tel&eacute;fono, Otro contacto, Salario, Especialidad</p>
-        <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Fotocopia de C&eacute;dula</p>
-        <p>&bull;<strong> Guardar.</strong></p>
+        <img src="/static/img/pasos_profesorlista.gif" alt="pasos_alumnolista" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br><br>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Profesor : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
-        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Profesor : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
+        <hr>
+        <p><span style="color: #003366;"><strong>Opcion 1. Lista Profesores :&nbsp;Se puede ver la lista de todos los profesores y realizar las siguientes acciones. </strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Editar Profesor : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Eliminar Profesor : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
         <p>&bull; <strong><em>El registro del profesor sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Profesor :<img src="/static/img/busqueda.png" alt="busqueda" /> </strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar el resgistro del alumno sea por nombre, apellido u otro campo.</em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 2.  Filtrar la cantidad de profesores en la pantalla.</strong></span></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Buscar Profesor <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Cédula, Nombre, Apellido, Dirección, Teléfono, Especialidad). </em></strong></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Para crear un nuevo profesor, dar clic en <img src="/static/img/nuevo_profesor.png" alt="nuevo_profesor" /></strong></span></p>
+        <p>&bull; <strong><em>Una vez creado el registro de nuevo profesor, este se encontrará en la lista. </em></strong></p>
 {% endblock %}
