--- a/src/escuela/templates/clases.html
+++ b/src/escuela/templates/clases.html
@@ -97,21 +97,32 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nueva Clase </span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista de Clases</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Podr&aacute; visualizar a todas las <strong>Clases</strong> ademas de agregar nuevas. Siga los siguientes pasos:&nbsp;</p>
     <p style="text-align: center;">&nbsp;</p>
-        <p><strong>Si desea agregar Clases , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
-        <p><span style="color: #003366;"><strong>Opcion 1. Nueva Clase :&nbsp;Ingrese de la clase y descripci&oacute;n, luego presione Enter.</strong></span></p>
-        <p>&bull;<strong> Guardar.</strong></p>
+        <img src="/static/img/pasos_claseslista.gif" alt="claseslista" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br><br>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Clase : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
-        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
+    <hr>
+        <p><span style="color: #003366;"><strong>Opcion 1. Lista de Clases :&nbsp;Se puede ver la lista de todas las clases y realizar las siguientes acciones. </strong></span></p>
+    <hr>
+        <p><span style="color: #003366;"><strong>Opcion 2. Acciones. </strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Editar Clase : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Eliminar Clase : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
+        <p>&bull; <strong><em>El registro de la clase sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Clase : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
-        <p>&bull; <strong><em>El registro ser&aacute; eliminado de forma <strong>permanente</strong>.</em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3.  Filtrar la cantidad de Clases en la pantalla.</strong></span></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Clase:</strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar la clase por su nombre o descripci&oacute;n.</em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Buscar Clase <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Nombre, Descripción). </em></strong></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Para crear una nueva clase, dar clic a <img src="/static/img/nueva_clase.png" alt="nueva_clase" /></strong></span></p>
+        <p>&bull; <strong><em>Una vez creado el registro de nueva clase, este se encontrará en la lista. </em></strong></p>
 {% endblock %}
