--- a/src/escuela/templates/grupos.html
+++ b/src/escuela/templates/grupos.html
@@ -118,24 +118,33 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Grupo</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista de Grupos</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Para agregar un grupo es necesario que se encuentre creada una <strong>Clase</strong>. Siga los siguientes pasos:&nbsp;</p>
     <p style="text-align: center;">&nbsp;</p>
-        <p><strong>Si desea agregar Grupos , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
-        <p><span style="color: #003366;"><strong>Opcion 1. Nuevo Grupo :&nbsp;Seleccione la clase luego presione Enter.</strong></span></p>
-        <p><br />&bull; <strong><em>Complete de manera obligatoria los siguientes campos:</em></strong> Clase, Profesor, Cupo Maximo, Costo, Hora Inicio, Hora Fin.</p>
-        <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong> </em>Dias.</p>
-        <p>&bull;<strong> Guardar.</strong></p>
+        <img src="/static/img/pasos_gruposlista.gif" alt="pasos_gruposlista" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br><br>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Grupo : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
-        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
+    <hr>
+        <p><span style="color: #003366;"><strong>Opcion 1. Lista de Grupos :&nbsp;Se puede ver la lista de todos los grupos y realizar las siguientes acciones. </strong></span></p>
+    <hr>
+        <p><span style="color: #003366;"><strong>Opcion 2. Acciones. </strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Editar Grupos : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Eliminar Grupos : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
+        <p>&bull; <strong><em>El registro del grupo sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Grupo : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
-        <p>&bull; <strong><em>El registro ser&aacute; eliminado de forma <strong>permanente</strong>.</em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3.  Filtrar la cantidad de Grupos en la pantalla.</strong></span></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Grupo:</strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar grupos por cualquier campo (Clase, Profesor, Cupo Maximo, Costo).</em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Grupo <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Clase, Profesor, Cupo Máximo, Costo, Hora). </em></strong></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Para crear un nuevo grupo, dar clic en <img src="/static/img/nuevo_grupo.png" alt="nuevo_grupo" /></strong></span></p>
+        <p>&bull; <strong><em>Una vez creado el registro de nuevo grupo, este se encontrará en la lista. </em></strong></p>
 {% endblock %}
 
