--- a/src/main/templates/main/alumnos.html
+++ b/src/main/templates/main/alumnos.html
@@ -115,23 +115,31 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Alumno</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Alumnos</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Alumnos</strong> exitentes, ademas de agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
+<p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Alumnos</strong> con sus datos, además de poder agregar nuevos.</p>
     <p style="text-align: center;">&nbsp;</p>
-        <p><strong>Si desea agregar m&aacute;s alumnos , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
-        <p><span style="color: #003366;"><strong>Opcion 1. Nuevo alumno :&nbsp;Ingrese el numero de c&eacute;dula y presione Enter.</strong></span></p>
-        <p>&bull; <em><strong>Complete de manera obligatoria los siguientes campos:</strong></em>C&eacute;dula, Nombre y Apellido, Sexo, Direcci&oacute;n, Estado</p>
-        <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula, Tipo Responsable</p>
-        <p>&bull;<strong><em> Y podemos guardar el registro <img src="/static/img/guardar.png" alt="guardar" /></em></strong></p>
+        <img src="/static/img/pasos_alumnolista.gif" alt="pasos_alumnolista" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br><br>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Alumno : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
-        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar alumno : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
+        <hr>
+        <p><span style="color: #003366;"><strong>Opcion 1. Lista alumnos :&nbsp;Se puede ver la lista de todos los alumnos y realizar las siguientes acciones. </strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Editar Alumno : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Eliminar alumno : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
         <p>&bull; <strong><em>El registro del alumno sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar alumno : <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar el resgistro del alumno sea por nombre, apellido u otro campo.</em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 2.  Filtrar la cantidad de alumnos en la pantalla.</strong></span></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Buscar alumno <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Cédula, Nombre, Apellido, Dirección, Teléfono). </em></strong></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Para crear un nuevo alumno, dar clic a <img src="/static/img/icono_nuevoalumno.png" alt="icono_nuevoalumno" /></strong></span></p>
+        <p>&bull; <strong><em>Una vez creado el registro de nuevo alumno, este se encontrará en la lista. </em></strong></p>
 {% endblock %}
