--- a/src/main/templates/main/profesores-form.html
+++ b/src/main/templates/main/profesores-form.html
@@ -51,24 +51,15 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 16pt;"><span style="color: #003366;"><strong>Nuevo Profesor</strong></span></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Profesor</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Profesores</strong> exitentes, ademas de agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
+<p style="text-align: center;"> <span style="font-size: 14pt;">Cargar los datos del profesor, según sean <strong>obligatorio u opcionales</strong></span>.</p>
     <p style="text-align: center;">&nbsp;</p>
-        <p><strong>Si desea agregar m&aacute;s profesores , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
-        <p><span style="color: #003366;"><strong>Opcion 1. Nuevo Profesor :&nbsp;Ingrese el numero de c&eacute;dula y presione Enter.</strong></span></p>
-        <p>&bull; <em><strong>Complete de manera obligatoria los siguientes campos:</strong></em>C&eacute;dula, Nombre y Apellido, Fecha de Nacimiento, Sexo,
-            Direcci&oacute;n, Tel&eacute;fono, Otro contacto, Salario, Especialidad</p>
-        <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Fotocopia de C&eacute;dula</p>
-        <p>&bull;<strong> Guardar.</strong></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Profesor : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
-        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Profesor : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
-        <p>&bull; <strong><em>El registro del profesor sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Profesor : <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar el resgistro del alumno sea por nombre, apellido u otro campo.</em></strong></p>
+        <img src="/static/img/pasos_nuevo_profesor.gif" alt="pasos_nuevo_profesor" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Guardar registro de profesor, clic en : <img src="/static/img/guardar.png" alt="guardar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Si no desea guardar el registro dar clic en : <img src="/static/img/cancelar.png" alt="cancelar" /></strong></span></p>
 {% endblock %}
