--- a/src/main/templates/main/titulares-form.html
+++ b/src/main/templates/main/titulares-form.html
@@ -51,25 +51,16 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 16pt;"><span style="color: #003366;"><strong>Nuevo Titular</strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Titular</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Titulares</strong> agregados, ademas de agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
+<p style="text-align: center;"> Cargar los datos del titular, según sean <strong>obligatorio u opcionales</strong>.</p>
     <p style="text-align: center;">&nbsp;</p>
-        <p><strong>Si desea agregar m&aacute;s titulares , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
-        <p><span style="color: #003366;"><strong>Opcion 1. Agregar Titular :&nbsp;Ingrese el numero de c&eacute;dula y presione Enter.</strong></span></p>
-        <p>&bull; <strong><em>Complete de manera obligatoria los siguientes campos:</em></strong> C&eacute;dula, Nombre y Apellido, Sexo, Direcci&oacute;n</p>
-        <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong> </em>Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula,
-            Foto, Ficha M&eacute;dica, Ficha de Inscripci&oacute;n, Estado</p>
-        <p>&bull;<strong> Guardar.</strong></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Titular : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
-        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Titular : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
-        <p>&bull; <strong><em>El registro del titular sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Titular : <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar el resgistro del titular sea por nombre, apellido u otro campo.  </em></strong></p>
-{% endblock %}
+        <img src="/static/img/pasos_nuevo_titular.gif" alt="pasos_nuevo_titular" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Guardar registro de titular, clic en : <img src="/static/img/guardar.png" alt="guardar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Si no desea guardar el registro dar clic en : <img src="/static/img/cancelar.png" alt="cancelar" /></strong></span></p>
+{% endblock %}}
 
