--- a/src/main/templates/main/titulares.html
+++ b/src/main/templates/main/titulares.html
@@ -119,24 +119,32 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Titular</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista Titulares</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Titulares</strong> agregados, ademas de agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
+<p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Titulares</strong> con sus datos, además de poder agregar nuevos.</p>
     <p style="text-align: center;">&nbsp;</p>
-        <p><strong>Si desea agregar m&aacute;s titulares , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
-        <p><span style="color: #003366;"><strong>Opcion 1. Agregar Titular :&nbsp;Ingrese el numero de c&eacute;dula y presione Enter.</strong></span></p>
-        <p>&bull; <strong><em>Complete de manera obligatoria los siguientes campos:</em></strong> C&eacute;dula, Nombre y Apellido, Sexo, Direcci&oacute;n</p>
-        <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong> </em>Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula,
-            Foto, Ficha M&eacute;dica, Ficha de Inscripci&oacute;n, Estado</p>
-        <p>&bull;<strong> Guardar.</strong></p>
+        <img src="/static/img/pasos_titulareslista.gif" alt="pasos_titulareslista" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br><br>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Titular : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
-        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
-
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Titular : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
+        <hr>
+        <p><span style="color: #003366;"><strong>Opcion 1. Lista de titulares :&nbsp;Se puede ver la lista de todos los titulares y realizar las siguientes acciones. </strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Editar Titular : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Eliminar Titular : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
         <p>&bull; <strong><em>El registro del titular sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Titular : <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar el resgistro del titular sea por nombre, apellido u otro campo. </em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 2.  Filtrar la cantidad de titulares en la pantalla.</strong></span></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Buscar titular <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Cédula, Nombre, Apellido, Dirección, Teléfono). </em></strong></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Para crear un nuevo titular, dar clic a <img src="/static/img/nuevo_titular.png" alt="nuevo_titular" /></strong></span></p>
+        <p>&bull; <strong><em>Una vez creado el registro de titular, este se encontrará en la lista. </em></strong></p>
 {% endblock %}
+
