--- a/src/tienda/templates/clientes.html
+++ b/src/tienda/templates/clientes.html
@@ -100,24 +100,33 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Cliente</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista de Clientes</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Clientes</strong> exitentes, ademas de agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
+<p style="text-align: center;"><span style="font-size: 14pt;">Podr&aacute; visualizar a todos los <strong>Clientes</strong> con sus datos, además de poder agregar nuevos.</p>
     <p style="text-align: center;">&nbsp;</p>
-        <p><strong>Si desea agregar m&aacute;s clientes, presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
-        <p><span style="color: #003366;"><strong>Opcion 1. Nuevo Cliente :&nbsp;</strong></span></p>
-        <p>&bull; <em><strong>Complete de manera obligatoria los siguientes campos:</strong></em> Raz&oacute;n Social, RUC Cliente, Direcci&oacute;n, Tel&eacute;fono</p>
-       <!-- <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula, Tipo Responsable</p>-->
-        <p>&bull;<strong><em> Y podemos guardar el cliente <img src="/static/img/guardar.png" alt="guardar" /></em></strong></p>
+        <img src="/static/img/pasos_clienteslista.gif" alt="pasos_clienteslista" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br>
+        <hr>
+        <p><span style="color: #003366;"><strong>1. Lista de clientes :&nbsp;Se puede ver la lista de todos los clientes y realizar las siguientes acciones. </strong></span></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Cliente : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
-        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>2.  Filtrar la cantidad de clientes en la pantalla.</strong></span></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Cliente : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>3. Acciones que podemos realizar sobre cada registro de clientes.</strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Editar clientes : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Eliminar clientes : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
         <p>&bull; <strong><em>El registro del cliente sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>4. Buscar cliente <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Razón Social, RUC, Dirección, Teléfono). </em></strong></p>
 
-        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Cliente : <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
-        <p>&bull; <strong><em>Podemos buscar el resgistro del Cliente sea por Raz&oacute;n Social, RUC u otro campo.</em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>5.  Para crear nuevo cliente, haga clic en el icono <img src="/static/img/nuevo_cliente.png" alt="nuevo_cliente" /></strong></span></p>
+        <p>&bull; <strong><em>Una vez creado el registro de nuevo cliente, este se encontrará en la lista. </em></strong></p>
 {% endblock %}
 
