--- a/src/tienda/templates/facturas.html
+++ b/src/tienda/templates/facturas.html
@@ -117,27 +117,31 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Ayuda para agregar Talonario de Factura</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista de Facturas</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-        <p style="text-align: center;">Se listan los talonarios vigentes y vencidos, puede agregar un nuevo <strong>Talonario vigente</strong>. Siga los siguientes pasos:&nbsp;</p>
-            <p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><span style="font-size: 14pt;">Podr&aacute; visualizar a todas las <strong>Facturas</strong> además de poder agregar nuevos.</p>
+    <p style="text-align: center;">&nbsp;</p>
+        <img src="/static/img/pasos_fact_talonario.gif" alt="pasos_fact_talonario" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br>
+        <hr>
+        <p><span style="color: #003366;"><strong>1. Lista de Talonarios de Factura :&nbsp;Se puede ver la lista de todos las facturas cargadas y realizar las siguientes acciones. </strong></span></p>
 
-        <p><span style="color: #003366;"><strong> Nueva Factura : <img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></span></p>
-        <p>&bull; <strong><em> Complete de manera obligatoria los siguientes campos:
-        </em></strong>
-        <table><ol><li> Nombre
-        <br></br><li>RUC
-        <br></br><li>Actividad Economica
-        <br></br><li>Direcci&oacute;n
-        <br></br><li>Tel&eacute;fono
-        <br></br><li>Numero de timbrado : debe ser de 8 digitos. Asegúrese de que este valor sea menor o igual a  <strong>12345678</strong>
-        <br></br><li>Punto de Emisi&oacute;n : si la escuela tiene sucursales este numero variar&aacute; <strong>001-001</strong>
-        <br></br><li>Nro inicial : los primero numeros que van luego de los primeros 6 digitos  <strong>0000001</strong>
-        <br></br><li>Nro final : los ultimos numeros que van luego de los primeros 6 digitos <strong>9999999</strong>
-        <br></br><li>Vigencia desde: esta vigencia es otorgada por el SET.
-        <br></br><li>Vigencia hasta: esta vigencia es otorgada por el SET.
-        <br></br><li>Estado
-        </ol></table></p>
-        <p>&bull;<strong><em> Y podemos guardar el talonario <img src="/static/img/guardar.png" alt="guardar" /></em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>2. Acciones que podemos realizar sobre cada registro de producto.</strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Editar factura : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Eliminar factura : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
+        <p>&bull; <strong><em>El registro del factura sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>3.  Filtrar la cantidad de facturas en la pantalla.</strong></span></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>4. Buscar factura <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Fecha de Vigencia, Número de Timbrado). </em></strong></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>5.  Para crear nuevo talonario de factura, haga clic en el ícono <img src="/static/img/nueva_factura.png" alt="nueva_factura" /></strong></span></p>
+        <p>&bull; <strong><em>Una vez creado el registro de nuevo talonario factura, este se encontrará en la lista. </em></strong></p>
 {% endblock %}
