--- a/src/tienda/templates/producto-form.html
+++ b/src/tienda/templates/producto-form.html
@@ -54,28 +54,32 @@
     </script>
 {% endblock %}
 
+
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Ayuda para agregar Producto</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Prodcuto</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-        <p style="text-align: center;">Se listan los productos y se puede agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
-            <p style="text-align: center;">&nbsp;</p>
-
-        <p><span style="color: #003366;"><strong> Nuevo Producto : <img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></span></p>
-        <p>&bull; <strong><em> Complete de manera obligatoria los siguientes campos: </em></strong>
-
-        <table><ol><li> Codigo: sera puesto por la escuela para control interno.
-        <br></br><li>Nombre.
-        <br></br><li>Descripci&oacute;n.
-        <br></br><li>Control de Stock.
-        <br></br><li>Precio de Venta : el precio final por el cual sera vendido el producto.
-        <br></br><li>Costo : precio de compra del producto.
-        <br></br><li>IVA : <strong>5%, 10% o Excentas.</strong>
-        <br></br><li>Estado : debe estar <strong>activo</strong> para poder vender o <strong>inactivo</strong> si ya no se desea ver en el listado.
-        <br></br><li>Existencia: debe tener un numero mayor a cero dentro del sistema.
-        </ol></table></p>
-
-        <p>&bull;<strong><em> Y podemos guardar el producto <img src="/static/img/guardar.png" alt="guardar" /></em></strong></p>
-        <p>&bull; <strong><em> Complete de manera opcional el siguiente campo: </em></strong>Foto producto.</p>
+<p style="text-align: center;"> <span style="font-size: 12pt;">Cargar campos del productos, según sean <strong>obligatorio u opcionales</strong>.</span></p>
+    <p style="text-align: center;">&nbsp;</p>
+        <img src="/static/img/pasos_nuevo_producto.gif" alt="pasos_nuevo_producto" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br><hr>
+        <p><span style="color: #003366;"><strong> 1. Codigo: sera puesto por la escuela para control interno.
+            <br><br>2. Nombre del producto.
+            <br><br>3. Foto del producto: si esta se encuentra disponible para tener de forma visual un registro.
+            <br><br>4. Descripci&oacute;n: breve descripción del producto.
+            <br><br>5. Control de Stock: debe realizar el check, si el producto será destinado para la venta.
+            <br><br>6. Precio de Venta : el precio final por el cuál sera vendido el producto.
+            <br><br>7. Costo : precio de compra del producto.
+            <br><br>8. IVA : 5%, 10% o Excentas.
+            <br><br>9. Estado: debe estar activo para poder vender o inactivo si ya no estara destinado para la venta.
+            <br><br>10. Existencia: debe tener un numero mayor a cero dentro del sistema.
+            <hr>
+        <p style="text-align: center;"> <span style="font-size: 12pt;"><strong>Acciones  : </strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Guardar registro de producto, clic en : <img src="/static/img/guardar.png" alt="guardar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Limpiar campos del registro , clic en : <img src="/static/img/limpiar.png" alt="limpiar" /></strong></span></p>
+        <p> <br /><span style="color: #003366;"><strong>&bull; Si no desea guardar el registro dar clic en : <img src="/static/img/cancelar.png" alt="cancelar" /></strong></span></p>
 {% endblock %}
