- Vista de inscripciones inactivas - Vista de ventas canceladas

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -15,7 +15,8 @@
                     <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="/escuela/inscripciones/new"> Nueva inscripción</a></li>
-                        <li><a href="/escuela/inscripciones">Consulta inscripciones</a></li>
+                        <li><a href="/escuela/inscripciones">Inscripciones Activas</a></li>
+                        <li><a href="/escuela/inscripciones/inactivas">Inscripciones Inactivas</a></li>
                         <li><a href="/escuela/asistencia/new">Asistencia</a></li>
                         <li><a href="/alumnos">Alumnos</a></li>
                         <li><a href="/titulares">Titulares</a></li>
@@ -47,7 +48,7 @@
                     <ul class="nav child_menu">
                         <li><a href="/tienda/ventas/new">Vender</a></li>
 
-                        <li><a href="/">Ventas canceladas</a></li>
+
                         <li><a href="/escuela/cuentas">Cuentas a cobrar</a></li>
                         <li><a href="/tienda/clientes">Clientes</a></li>
                         <li><a href="/tienda/productos">Productos</a></li>
@@ -62,9 +63,8 @@
                         <li><a href="/tienda/caja">Caja Chica</a></li>
                         <li><a href="/tienda/compras">Compras por Día</a></li>
                         <li><a href="/tienda/ventas">Ventas por Día</a></li>
+                        <li><a href="/tienda/ventas/canceladas">Ventas canceladas por Día</a></li>
 
-
-                        <li><a href="/tienda/">Balance por Día</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/reportes_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
