Estado de cuenta (Generar Cuenta manualmente)
- libro_venta no suma si está cancelado
- Muestra en detalle si esta cancelado la factura

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -64,6 +64,7 @@
                         <li><a href="/tienda/compras">Compras por Día</a></li>
                         <li><a href="/tienda/ventas">Ventas por Día</a></li>
                         <li><a href="/tienda/ventas/canceladas">Ventas canceladas por Día</a></li>
+                        <li><a href="/tienda/estado_cuenta">Estado de cuenta</a></li>
 
                     </ul>
                 </li>
@@ -71,7 +72,6 @@
                     Reportes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="/reportes/grupo/alumnos">Alumnos por Grupo</a></li>
-                        <li><a href="#">Estado de cuenta por Titular</a></li>
                         <li><a href="/reportes/asistencia">Asistencia Mensual </a></li>
                         <li><a href="/reportes/balance">Balance Mensual</a></li>
                         <li><a href="/reportes/compra">Libro Compra</a></li>
