Arregla "None" en Ventas por día, cuando no hay datos

--- a/src/tienda/templates/ventas.html
+++ b/src/tienda/templates/ventas.html
@@ -8,7 +8,7 @@
                      font-weight: bold;
                      color: #2A3F54;
                           text-align: center;">
-                        Total Venta del Día: {{ total | intdot }} ₲
+                        Total Venta del Día: {{ total.total | intdot }} ₲
                 </div>
         <div style="font-size: 15px;
                      font-weight: bold;
